# auto_secondbrain

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  DEEP_DIVE_GUIDE.md  DEVCONTAINER_GUIDE.md  GEMINI.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml
alembic/: env.py
alembic/versions/: 984716ed9e26_create_initial_vault_table.py
apps/api/: __init__.py  config.py  main.py  pyproject.toml
apps/api/routers/: health.py  vault.py
apps/api/services/: vault_service.py
apps/cli/: config.py  main.py  pyproject.toml
apps/frontend/: README.md  package.json
apps/streamlit_app/: config.py  main.py  pyproject.toml
apps/workers/: __init__.py  config.py  main.py  pyproject.toml
apps/workers/tasks/: vault_processing.py
infra/docker/: Dockerfile.api  Dockerfile.dev  Dockerfile.streamlit  Dockerfile.workers
libs/cloud_storage/: __init__.py  base.py  google_drive.py  pyproject.toml
libs/database/: __init__.py  connection.py  migrations.py  pyproject.toml
libs/llm_clients/: __init__.py  anthropic_client.py  base.py  openai_client.py  pyproject.toml
libs/vector_db/: __init__.py  base.py  in_memory.py  pyproject.toml
scripts/: init-db.sql
tests/: __init__.py  conftest.py
tests/integration/: test_db.py  test_vault_api.py
tests/unit/: test_vault_service.py
