[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secondbrain"
version = "0.1.0"
description = "AI-powered knowledge management system"
license = {text = "MIT"}
authors = [
    {name = "Gabriel Galvão"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "structlog>=23.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "streamlit>=1.28.0",
    "click>=8.1.0",
    "typer>=0.9.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "httpx>=0.25.0",
    "types-requests>=2.31.0",
    "types-redis>=4.6.0",
    "types-psycopg2>=2.9.21",
    "pandas-stubs>=2.0.0",
    "lxml-stubs>=0.5.0",
    "google-api-python-client-stubs>=1.0.0",
]

[project.scripts]
secondbrain = "apps.cli.main:cli"

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/cli",
    "apps/streamlit_app",
    "apps/workers",
    "libs/*",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["apps", "libs"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = true
explicit_package_bases = true

[tool.mypy-fastapi]
ignore_missing_imports = true

[tool.mypy-fastapi.middleware.cors]
ignore_missing_imports = true

[tool.mypy-fastapi.responses]
ignore_missing_imports = true

[tool.mypy-structlog]
ignore_missing_imports = true

[tool.mypy-celery]
ignore_missing_imports = true

[tool.mypy-typer]
ignore_missing_imports = true

[tool.mypy-anthropic]
ignore_missing_imports = true

[tool.mypy-google.auth.transport.requests]
ignore_missing_imports = true

[tool.mypy-google.oauth2.credentials]
ignore_missing_imports = true

[tool.mypy-google_auth_oauthlib.flow]
ignore_missing_imports = true

[tool.mypy-googleapiclient.discovery]
ignore_missing_imports = true

[tool.mypy-googleapiclient.http]
ignore_missing_imports = true

[tool.mypy-streamlit]
ignore_missing_imports = true

[tool.mypy-requests]
ignore_missing_imports = true

[tool.mypy-pandas]
ignore_missing_imports = true

[tool.mypy-sentence_transformers]
ignore_missing_imports = true

[tool.mypy-libs.llm_clients.anthropic_client]
ignore_errors = true

[tool.mypy-alembic]
ignore_missing_imports = true

[tool.mypy-alembic.config]
ignore_missing_imports = true

[tool.mypy-alembic.command]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["apps", "libs"]


[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B108", "B113"]

[tool.pytest.ini_options]
testpaths = ["apps", "libs"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=apps --cov=libs --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
