[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secondbrain-streamlit"
version = "0.1.0"
description = "Streamlit UI for SecondBrain rapid prototyping"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "python-dotenv>=1.0.0",
]
