[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secondbrain-workers"
version = "0.1.0"
description = "Celery worker services for SecondBrain"
dependencies = [
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "structlog>=23.0.0",
    "python-dotenv>=1.0.0",
]
