[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secondbrain-database"
version = "0.1.0"
description = "Database connection, migrations, and ORM setup for SecondBrain"
dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
]