[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secondbrain-llm-clients"
version = "0.1.0"
description = "LLM API clients and utilities for SecondBrain"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "httpx>=0.25.0",
    "tenacity>=8.0.0",
]
